--- a/GameOfLife.Presentation/MainWindow.axaml
+++ b/GameOfLife.Presentation/MainWindow.axaml
@@ -155,17 +155,35 @@
                         </Style.Animations>
                     </Style>
                 </Border.Styles>
-                <StackPanel Margin="0,20,0,0" Spacing="5">
-                    <Button Content="New Game"
-                            Click="NewGame_Click"
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel Grid.Row="0" Margin="0,20,0,0" Spacing="5">
+                        <Button Content="New Game"
+                                Click="NewGame_Click"
+                                Padding="20,12"
+                                FontSize="14"
+                                HorizontalAlignment="Stretch"
+                                HorizontalContentAlignment="Left"
+                                Margin="10,0"
+                                Background="#3C3C3C"
+                                Foreground="White"/>
+                    </StackPanel>
+                    
+                    <Button Grid.Row="1"
+                            Content="Exit"
+                            Click="Exit_Click"
                             Padding="20,12"
                             FontSize="14"
                             HorizontalAlignment="Stretch"
                             HorizontalContentAlignment="Left"
-                            Margin="10,0"
-                            Background="#3C3C3C"
+                            Margin="10,0,20,20"
+                            Background="#D32F2F"
                             Foreground="White"/>
-                </StackPanel>
+                </Grid>
             </Border>
         </Grid>
     </Grid>
