refactor: put the step duration at the second row

--- a/GameOfLife.Presentation/MainWindow.axaml
+++ b/GameOfLife.Presentation/MainWindow.axaml
@@ -68,31 +68,6 @@
                             Command="{Binding RandomizeCommand}"
                             Padding="15,10"
                             FontSize="14"/>
-                    
-                    <TextBlock Text="Speed:" 
-                               VerticalAlignment="Center"
-                               Margin="20,0,5,0"
-                               Foreground="White"
-                               FontSize="14"/>
-                    
-                    <Slider Value="{Binding SpeedMs, Mode=TwoWay}"
-                            Minimum="100"
-                            Maximum="1000"
-                            Width="150"
-                            VerticalAlignment="Center"
-                            TickFrequency="10"
-                            IsSnapToTickEnabled="True"/>
-                    
-                    <TextBox Text="{Binding SpeedMs, Mode=TwoWay}"
-                             Width="50"
-                             VerticalAlignment="Center"
-                             HorizontalContentAlignment="Center"
-                             FontSize="14"/>
-                    
-                    <TextBlock Text="ms" 
-                               VerticalAlignment="Center"
-                               Foreground="White"
-                               FontSize="14"/>
                 </StackPanel>
                 
                 <views:GameStatsPanel Grid.Column="2" 
@@ -101,29 +76,67 @@
                                       Margin="0,0,20,0"/>
             </Grid>
             
-            <Grid Grid.Row="1" Background="#232323" Height="40">
+            <Grid Grid.Row="1" Background="#232323" Height="50">
                 <StackPanel Orientation="Horizontal"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Spacing="20">
-                    <CheckBox Content="Auto-pause on stable state"
-                              IsChecked="{Binding AutoPauseOnStableState, Mode=TwoWay}"
-                              VerticalAlignment="Center"
-                              Foreground="White"
-                              FontSize="13"/>
+                    <Border Background="#2C2C2C"
+                            CornerRadius="4"
+                            Padding="8,4"
+                            Margin="0,5">
+                        <StackPanel Orientation="Horizontal" Spacing="10">
+                            <CheckBox Content="Auto-pause on stable state"
+                                      IsChecked="{Binding AutoPauseOnStableState, Mode=TwoWay}"
+                                      VerticalAlignment="Center"
+                                      Foreground="White"
+                                      FontSize="13"/>
+                            
+                            <StackPanel Orientation="Horizontal" Spacing="5">
+                                <TextBlock Text="History depth:" 
+                                           VerticalAlignment="Center"
+                                           Foreground="White"
+                                           FontSize="13"/>
+                                
+                                <TextBox Text="{Binding HistoryDepth, Mode=TwoWay}"
+                                         Width="50"
+                                         VerticalAlignment="Center"
+                                         HorizontalContentAlignment="Center"
+                                         FontSize="13"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
                     
-                    <StackPanel Orientation="Horizontal" Spacing="5">
-                        <TextBlock Text="History depth:" 
-                                   VerticalAlignment="Center"
-                                   Foreground="White"
-                                   FontSize="13"/>
-                        
-                        <TextBox Text="{Binding HistoryDepth, Mode=TwoWay}"
-                                 Width="50"
-                                 VerticalAlignment="Center"
-                                 HorizontalContentAlignment="Center"
-                                 FontSize="13"/>
-                    </StackPanel>
+                    <Border Background="#2C2C2C"
+                            CornerRadius="4"
+                            Padding="8,4"
+                            Margin="0,5">
+                        <StackPanel Orientation="Horizontal" Spacing="5">
+                            <TextBlock Text="Step Duration:" 
+                                       VerticalAlignment="Center"
+                                       Foreground="White"
+                                       FontSize="13"/>
+                            
+                            <Slider Value="{Binding SpeedMs, Mode=TwoWay}"
+                                    Minimum="100"
+                                    Maximum="1000"
+                                    Width="150"
+                                    VerticalAlignment="Center"
+                                    TickFrequency="10"
+                                    IsSnapToTickEnabled="True"/>
+                            
+                            <TextBox Text="{Binding SpeedMs, Mode=TwoWay}"
+                                     Width="50"
+                                     VerticalAlignment="Center"
+                                     HorizontalContentAlignment="Center"
+                                     FontSize="13"/>
+                            
+                            <TextBlock Text="ms" 
+                                       VerticalAlignment="Center"
+                                       Foreground="White"
+                                       FontSize="13"/>
+                        </StackPanel>
+                    </Border>
                 </StackPanel>
             </Grid>
         </Grid>
