--- a/GameOfLife.Presentation/MainWindow.axaml
+++ b/GameOfLife.Presentation/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:GameOfLife.Presentation.ViewModels"
-        xmlns:views="clr-namespace:GameOfLife.Presentation.Views"
+        xmlns:views="clr-namespace:GameOfLife.Presentation.Views.Components"
         mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="1000"
         x:Class="GameOfLife.Presentation.MainWindow"
         x:DataType="vm:GameViewModel"
