--- a/GameOfLife.Presentation/Views/Dialogs/ColorPickerDialog.axaml
+++ b/GameOfLife.Presentation/Views/Dialogs/ColorPickerDialog.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="500"
-        x:Class="GameOfLife.Presentation.Views.ColorPickerDialog"
+        x:Class="GameOfLife.Presentation.Views.Dialogs.ColorPickerDialog"
         Title="Pick Color"
         Width="450"
         Height="500"
