--- a/GameOfLife.Presentation/Views/Dialogs/SaveGameDialog.axaml
+++ b/GameOfLife.Presentation/Views/Dialogs/SaveGameDialog.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="200"
-        x:Class="GameOfLife.Presentation.Views.SaveGameDialog"
+        x:Class="GameOfLife.Presentation.Views.Dialogs.SaveGameDialog"
         Title="Save Game"
         Width="400"
         Height="200"
