--- a/GameOfLife.Presentation/Views/Dialogs/SettingsDialog.axaml
+++ b/GameOfLife.Presentation/Views/Dialogs/SettingsDialog.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="500"
-        x:Class="GameOfLife.Presentation.Views.SettingsDialog"
+        x:Class="GameOfLife.Presentation.Views.Dialogs.SettingsDialog"
         Title="Settings"
         Width="500"
         Height="550"
